[package]
name = "halloween-countdown"
version = "1.0.0"
edition = "2021"
authors = ["Andrew C. Young <andrew@vaelen.org>"]
license = "MIT"
description = "A Halloween countdown application with spooky fonts"

[dependencies]
eframe = "0.29"
egui = "0.29"
chrono = "0.4"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
